sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:95: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
1  
^SelectBaseball:96: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (1 >= 0) return res;
  ^